Added sound visualisation

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <div class="page-header">
         <h1>Web Voice Converter</h1>
       </div>    <br><br><br>
-      <div id="INvisualisation" class="visualisationArea" style="float: left;"></div>
+      <div id="INvisualisation" class="visualisationArea" style="float: left;"><span class="labelIN">IN</span></div>
       <div class="circle" id="play_btn"><span id="play_icon" style="transform: translateY(45%) translateX(10%);" class="glyphicon glyphicon-play" aria-hidden="true" onclick="onPlay()"></span></div>
-      <div id="OUTvisualisation" class="visualisationArea" style="float: right;"></div>
+      <div id="OUTvisualisation" class="visualisationArea" style="float: right;"><span class="labelOUT">OUT</span></div>
 
       <br><br><br>
       <br><br><br>
