Added links to our names.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p class="text-muted">Web Voice Converter &copy; 2016 pboueke & mseefelder.</p>
+        <p class="text-muted">Web Voice Converter &copy; 2016 <a href="https://github.com/pboueke">pboueke</a> & <a href="https://github.com/mseefelder">mseefelder</a>.</p>
       </div>
     </footer>
 
