--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
       <div class="page-header">
         <h1>Web Voice Converter</h1>
       </div>    <br><br><br>
-      <div id="INvisualisation" class="visualisationArea" style="float: left;"><span class="labelIN">IN</span></div>
       <div class="circle" id="play_btn"><span id="play_icon" style="transform: translateY(45%) translateX(10%);" class="glyphicon glyphicon-play" aria-hidden="true" onclick="onPlay()"></span></div>
-      <div id="OUTvisualisation" class="visualisationArea" style="float: right;"><span class="labelOUT">OUT</span></div>
 
       <br><br><br>
-      <br><br><br>
-      <br><br><br>
-      <br><br><br>
 
-      <div class="container">
+      <div class="container" id="graphs" style="display:none;">
+        <div id="INvisualisation" class="visualisationArea" style="float: left;"><span class="labelIN">IN</span></div>
+        <div id="OUTvisualisation" class="visualisationArea" style="float: right;"><span class="labelOUT">OUT</span></div>
+      </div>
+
+      <div class="container" id="parameters">
         <h2>Effects</h2>
         <p>Select which effects you want to apply and how much of each should be applied.</p>
         <table class="table">
