--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 
     <footer class="footer">
       <div class="container">
-        <p class="text-muted">Web Voice Converter &copy; 2016 <a href="https://github.com/pboueke">pboueke</a> & <a href="https://github.com/mseefelder">mseefelder</a>.</p>
+        <p style="float: left;" class="text-muted">Web Voice Converter &copy; 2016 <a href="https://github.com/pboueke">pboueke</a> & <a href="https://github.com/mseefelder">mseefelder</a>.</p>
+        <p style="float: right;" class="text-muted">(won't work on chrome)</p>
       </div>
     </footer>
 
