Compression parameters name changed.

--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
             <tr>
               <td>Compression</td>
               <td><input id="compression_enabled" type="checkbox" name="compression_switch" ></td>
-              <td>Min frequency</td>
+              <td>Min value</td>
               <td><input id="compression_min_slider" data-slider-id='compressionSlider' type="text" data-slider-min="100" data-slider-max="600" data-slider-step="1" data-slider-value="200"/></td>
             </tr>
             <tr>
               <td></td>
               <td></td>
-              <td>Max frequency</td>
+              <td>Max value</td>
               <td><input id="compression_max_slider" data-slider-id='compressionSlider' type="text" data-slider-min="600" data-slider-max="3000" data-slider-step="1" data-slider-value="2000"/></td>
             </tr>
           </tbody>
