Restructured layout, added replay functionality, changed delay impulse response.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
     <div class="container">
       <div class="page-header">
         <h1>Web Voice Converter</h1>
-      </div>    <br><br><br>
-      <div onclick="onPlay()" class="circle" id="play_btn"><span id="play_icon" style="transform: translateY(45%) translateX(10%);" class="glyphicon glyphicon-play" aria-hidden="true"></span></div>
-
-      <br><br><br>
+      </div>    
+      <br>
+      <div class="container">
+      <div onclick="onPlay()" class="circle" id="play_btn"><span id="play_icon" style="transform: translateY(1vmin) translateX(-8vmin); width: 1vmin; height: 1vmin; font-size: 20vmin;" class="glyphicon glyphicon-play" aria-hidden="true"></span></div>
+      <br>
+      <div onclick="rePlay()" class="recircle" id="replay_btn" ><span id="replay_icon" style="transform: translateY(20%) translateX(0%); width: 7vmin; height: 7vmin; font-size: 7vmin;" class="glyphicon glyphicon-repeat" aria-hidden="true"></span></div>
+      </div>
+      <br>
 
       <div class="row" style="transform: translateX(8%)">
         <div class="col-sm-6" id="gain_slider2_div" style="display:none;">
