Slight interface adjustments

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Begin page content -->
     <div class="container">
       <div class="page-header">
-        <h1>Web Voice Converter</h1>
+        <h1 style="text-align: center;">Web Voice Converter</h1>
       </div>    
       <br>
       <div class="container">
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-    <br><br>
+    <br>
 
       <div class="container" id="graphs" style="display:none;">
         <div id="INvisualisation" class="visualisationArea" style="float: left;"><span class="labelIN">IN</span></div>
