index.html -> compression to filter

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <td><input id="delay_slider" data-slider-id='delaySlider' type="text" data-slider-min="1" data-slider-max="50" data-slider-step="1" data-slider-value="15"/></td>
             </tr>
             <tr>
-              <td>Compression</td>
+              <td>Filter</td>
               <td><input id="compression_enabled" type="checkbox" name="compression_switch" ></td>
               <td>Min value</td>
               <td><input id="compression_min_slider" data-slider-id='compressionSlider' type="text" data-slider-min="100" data-slider-max="600" data-slider-step="1" data-slider-value="200"/></td>
